# polygnn

./: polygnn-environment.yaml  py38requirements.txt  pyproject.toml  reqs.txt
polygnn/: __init__.py  interface.py  layers.py  torch_scatter_patch.py
polygnn/server/: api.py  backend.py  datamodels.py  properties.json
