[tool.poetry]
authors = ["Rishi Gurnani <rgurnani96@gmail.com>"]
description = ""
name = "polygnn"
version = "1.5.0"

[tool.poetry.dependencies]
ipykernel = "^6.6.0"
nndebugger = {git = "https://github.com/rishigurnani/nndebugger.git", rev = "main"}
numpy = "^1.17"
pandas = ">=1.1,<1.2"
polygnn-kit = {git = "https://github.com/rishigurnani/polygnn_kit.git", rev = "main"}
polygnn-trainer = {git = "https://github.com/rishigurnani/polygnn_trainer.git", rev = "main"}
python = "^3.7"
rdkit-pypi = "^2021.9.3"
scikit-optimize = "^0.9.0"
# torch-geometric = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
click = "8.0.2"
poethepoet = "^0.10.0"
pytest = "^5.2"

[tool.poe.tasks]
pyg-linux_win-cuda102 = "pip install https://data.pyg.org/whl/torch-1.12.0%2Bcu102/torch_scatter-2.1.0%2Bpt112cu102-cp37-cp37m-linux_x86_64.whl https://data.pyg.org/whl/torch-1.12.0%2Bcu102/torch_sparse-0.6.16%2Bpt112cu102-cp37-cp37m-linux_x86_64.whl torch_geometric"
pyg-osx = "pip install https://data.pyg.org/whl/torch-1.12.0%2Bcpu/torch_scatter-2.1.0-cp37-cp37m-macosx_10_15_x86_64.whl https://data.pyg.org/whl/torch-1.12.0%2Bcpu/torch_sparse-0.6.16-cp37-cp37m-macosx_10_15_x86_64.whl torch-geometric"
torch-linux_win-cuda102 = "pip install torch==1.12.1+cu102 torchvision==0.13.1+cu102 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu102"
torch-osx = "pip install torch==1.12.1 torchvision==0.13.1 torchaudio==0.12.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
